# dailytask

./: .editorconfig  .env.template  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
src/dailytask/: __init__.py  __main__.py  app.py  main.py
src/dailytask/api/: __init__.py  _redsea.py  _yunyu.py
src/dailytask/common/: config.py  utils.py
src/dailytask/notification/: __init__.py  _ntfy.py
src/dailytask/scheduler/: __init__.py  _redsea.py  _yunyu.py
