[project]
name = "dailytask"
version = "0.2.3"
description = "My Daily Task"
authors = [
    { name = "Karbob", email = "karbobc@gmail.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "fastapi[standard]>=0.114.0",
    "apscheduler>=4.0.0a5",
]
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dailytask = "dailytask:run"

[tool.rye]
managed = true
dev-dependencies = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "FA", # flake8 annotations
    "UP", # pyupgrade
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dailytask"]
